# stencil-maker

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: main.py
src/models/: __init__.py  models.py  pokemon.py
src/utils/: color_quantizer.py  mask_builder.py  svg_exporter.py  utils.py
